0028780: HLR with focus does not seem to work

Method HLRBRep_Curve::D1() is corrected to apply transformation to a point according to current projection parameters